# cloudsek_test

./: Dockerfile  README.md  docker-compose-db.yml  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: client.py  repository.py
app/models/: document.py  schemas.py
app/services/: fetcher.py  metadata_service.py
app/workers/: background.py
tests/: conftest.py  test_api.py
